# iioon

./: Cargo.toml  README.md  flake.nix  shell.nix
crates/iioon/: Cargo.toml
crates/iioon-derive/: Cargo.toml
crates/iioon-derive/src/: lib.rs
crates/iioon-derive/src/i18n/: lang.rs  mod.rs
crates/iioon/src/: lib.rs
crates/iioon/test-locales/: de.toml  en.toml
crates/iioon/tests/: basic.rs
crates/iioon/tests/locales/: en.toml
