[package]
name = "iioon-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
default = []
diagnostic = ["darling/diagnostics", "proc-macro-error2/nightly"]

[dependencies]
anyhow = "1.0.100"
convert_case = "0.8.0"
darling = "0.21.3"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
toml = "0.9.7"
