[package]
name = "iioon-derive"
version.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
default = []
diagnostic = ["darling/diagnostics", "proc-macro-error2/nightly"]

[dependencies]
anyhow = "1.0.100"
convert_case = "0.9.0"
darling = "0.21.3"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex = "1.12.2"
syn = "2.0.110"
toml = "0.9.8"
